examples/valid/read/echoInt.wacc
# echo the user's input int
# Output:
# enter an integer to echo
# #user input
# #repeat user input#

#Program:#

begin
	int x = 1 ;
  println "enter an integer to echo";
	read x ; 
	println x 
end
