examples/invalid/semanticErr/function/functionBadReturn.wacc
# function return type mismatch: int <- char
# Output:
# #semantic error#

#Program:#

begin
	int f() is
		return 'c'
	end
	int x = call f() ;
	println x 
end
	
